fix overflow problems

--- a/src/index.css
+++ b/src/index.css
@@ -33,21 +33,17 @@
 }
 
 html, body, #root {
-  height: 100%;
+  height: 100vh;
   color: var(--color-text-primary);
   background-color: var(--color-paper);
-  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   font-family: 'Nunito Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-  overflow: auto;
 }
 
 button, [role="button"], a, label, [role="menuitem"], [role="option"] {
